# TapeSorter

./: .clang-format  CMakeLists.txt  README.md  main.cpp  tape_config.ini
include/tatlin/: app_config.hpp  errors.hpp  file_tape.hpp  file_tape_factory.hpp  tape.hpp  tape_factory.hpp  tape_sorter.hpp
src/: app_config.cpp  file_tape.cpp  file_tape_factory.cpp  tape_sorter.cpp
tests/: test_app_config.cpp  test_file_tape.cpp  test_tape_sorter.cpp  test_utils.hpp
